sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/Vendor_Invoice__c.object-meta.xml
<CustomObject>
    <label>Vendor Invoice</label>
    <nameField>
        <displayFormat>VI-{000000}</displayFormat>
        <label>Vendor Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>