sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <description>The actual date payment on the invoice is to be made</description>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>