sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Add a comment explaining why the Actual Date was changed</description>
    <inlineHelpText>Add a comment explaining why the Actual Date was changed</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>