sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Number</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <errorMessage>This Contract does not belong to the Vendor you specified.It might have also expired or it&#39;s not a primary contract</errorMessage>
        <filterItems>
            <field>$Source.Vendor__c</field>
            <operation>equals</operation>
            <valueField>Contract.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contract.Primary_Contract__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contract.Contract_Expired__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Vendor Invoices</relationshipLabel>
    <relationshipName>Vendor_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>