sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Count_VIPOLI__c.field-meta.xml
<CustomField>
    <fullName>Count_VIPOLI__c</fullName>
    <label>Count VIPOLI</label>
    <summaryForeignKey>Vendor_Invoice_Purchase_Order_Line_Item__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>