sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Count_VIPOLI_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Count_VIPOLI_Reconciled__c</fullName>
    <description>Count VIPOLI Reconciled Line Items</description>
    <inlineHelpText>Count VIPOLI Reconciled Line Items</inlineHelpText>
    <label>Count VIPOLI Reconciled</label>
    <summaryFilterItems>
        <field>Vendor_Invoice_Purchase_Order_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Reconciled, AP Matched</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Invoice_Purchase_Order_Line_Item__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>