sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Currency_Config_Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency_Config_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipLabel>Vendor Invoices</relationshipLabel>
    <relationshipName>Vendor_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>