sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Delivery_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Number__c</fullName>
    <label>Delivery Note Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>