sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Expected_Total__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total__c</fullName>
    <label>Expected Total</label>
    <summarizedField>Vendor_Invoice_Purchase_Order_Line_Item__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Vendor_Invoice_Purchase_Order_Line_Item__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>