sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Freshlife_Balance__c.field-meta.xml
<CustomField>
    <fullName>Freshlife_Balance__c</fullName>
    <formula>Received_Freshlife_Value__c -  Paid_Freshlife_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freshlife Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>