sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance__c</fullName>
    <formula>Invoice_Received_Value__c  -  Total_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>