sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Invoice_Received_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Received_Value__c</fullName>
    <description>Value of received items</description>
    <inlineHelpText>Value of received items - Should match the value on the paper invoice minus returns</inlineHelpText>
    <label>Invoice Received Value</label>
    <summarizedField>Vendor_Invoice_Items__c.Received_Value__c</summarizedField>
    <summaryForeignKey>Vendor_Invoice_Items__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>