sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>