sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Invoice_Total_Reconciled_Total_Diff__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_Reconciled_Total_Diff__c</fullName>
    <description>This is the difference between the invoice Total and the Reconciled Invoice Total</description>
    <formula>Invoice_Total__c - Reconciled_Invoice_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the difference between the invoice Total and the Reconciled Invoice Total</inlineHelpText>
    <label>Invoice Total &amp; Reconciled Total Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>