sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Max_Price_Var__c.field-meta.xml
<CustomField>
    <fullName>Max_Price_Var__c</fullName>
    <description>Max Variance allowed (+/- of Invoice Value)</description>
    <formula>(Invoice_Total__c  +  (Invoice_Total__c  *  VI_Price_Var_Per__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max Variance allowed (+/- of Invoice Value)</inlineHelpText>
    <label>Max Price Var</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>