sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Min_Price_Var__c.field-meta.xml
<CustomField>
    <fullName>Min_Price_Var__c</fullName>
    <formula>(Invoice_Total__c - (Invoice_Total__c * VI_Price_Var_Per__c))</formula>
    <label>Min Price Var</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>