sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Paid_Sanergy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sanergy_Cost__c</fullName>
    <label>Gross Sanergy Cost</label>
    <summarizedField>Vendor_Invoice_Payment__c.Payment_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Invoice_Payment__c.Company__c</field>
        <operation>equals</operation>
        <value>&#39;aEBD0000000k9yM&#39;</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Invoice_Payment__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>