sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Payment_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmed__c</fullName>
    <label>Payment Confirmed</label>
    <summarizedField>Vendor_Invoice_Payment__c.Payment_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Invoice_Payment__c.Payment_Made__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Invoice_Payment__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>