sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Payment_Terms_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Due_Date__c</fullName>
    <formula>IF(  Payment_Terms__c = &#39;7 Days&#39;, Vendor_Invoice_date__c + 7,
IF(  Payment_Terms__c = &#39;15 Days&#39;, Vendor_Invoice_date__c + 15,  
 IF( Payment_Terms__c = &#39;30 Days&#39;, Vendor_Invoice_date__c + 30,NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Due Date</label>
    <type>Date</type>
</CustomField>