sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Payment_Total_Reconciled_Total_Diff__c.field-meta.xml
<CustomField>
    <fullName>Payment_Total_Reconciled_Total_Diff__c</fullName>
    <description>This is the difference between the Total amount that was paid to the vendor and the reconciled Total</description>
    <formula>Total_Payments__c - Reconciled_Invoice_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the difference between the Total amount that was paid to the vendor and the reconciled Total</inlineHelpText>
    <label>Payment Total &amp; Reconciled Total  Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>