sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Payment_Variance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Variance__c</fullName>
    <label>Payment Variance</label>
    <type>TextArea</type>
</CustomField>