sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Prepayment_Freshlife_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Freshlife_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Freshlife Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>