sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice__c</fullName>
    <label>Proforma Invoice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>