sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/QHSE_Approval_Time__c.field-meta.xml
<CustomField>
    <fullName>QHSE_Approval_Time__c</fullName>
    <label>QHSE Approval Time</label>
    <type>DateTime</type>
</CustomField>