sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Receipt_Variance__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Variance__c</fullName>
    <label>Receipt Variance</label>
    <type>TextArea</type>
</CustomField>