sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Received_SanergyFP_Value__c.field-meta.xml
<CustomField>
    <fullName>Received_SanergyFP_Value__c</fullName>
    <label>Received SanergyFP Value</label>
    <summarizedField>Vendor_Invoice_Items__c.Received_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Invoice_Items__c.Company__c</field>
        <operation>equals</operation>
        <value>&#39;aEBD0000000kA4o&#39;</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Invoice_Items__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>