sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Reconciled_Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Invoice_Total__c</fullName>
    <label>Reconciled Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>