sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Reconciled_Received_Value__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Received_Value__c</fullName>
    <label>Reconciled Total Received Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>