sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Sanergy_Balance__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Balance__c</fullName>
    <formula>Received_Sanergy_Value__c -  Paid_Sanergy_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanergy Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>