sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/SanergyFP_Balance__c.field-meta.xml
<CustomField>
    <fullName>SanergyFP_Balance__c</fullName>
    <formula>Received_SanergyFP_Value__c -  Paid_SanergyFP_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SanergyFP Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>