sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/SanergyNP_Balance__c.field-meta.xml
<CustomField>
    <fullName>SanergyNP_Balance__c</fullName>
    <formula>Received_SanergyNP_Value__c - Paid_SanergyNP_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SanergyNP Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>