sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Vendor Invoice stages</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Firmed</fullName>
            </value>
            <value>
                <fullName>Items Received</fullName>
            </value>
            <value>
                <fullName>Pin Created</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>