sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Sum_VI_Items_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Sum_VI_Items_Accepted__c</fullName>
    <label>Sum VI Items Accepted</label>
    <summarizedField>Vendor_Invoice_Items__c.Accepted_Receive_Quantity__c</summarizedField>
    <summaryForeignKey>Vendor_Invoice_Items__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>