sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Sum_VIPO_Items_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sum_VIPO_Items_Requested__c</fullName>
    <label>Sum VIPO Items Requested</label>
    <summarizedField>Vendor_Invoice_Purchase_Order_Line_Item__c.Requested_Quantity__c</summarizedField>
    <summaryForeignKey>Vendor_Invoice_Purchase_Order_Line_Item__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>