sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Time_Taken_to_Approve__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_to_Approve__c</fullName>
    <formula>QHSE_Approval_Time__c  -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken to Approve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>