sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Total_Freshlife_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Freshlife_Cost__c</fullName>
    <label>Total Freshlife Cost</label>
    <summarizedField>Vendor_Invoice_Items__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Invoice_Items__c.Company__c</field>
        <operation>equals</operation>
        <value>&#39;aEBD0000000kA4j&#39;</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Invoice_Items__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>