sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Total_Invoice_Cost_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Cost_del__c</fullName>
    <label>Total Invoice Cost</label>
    <summarizedField>Vendor_Invoice_Items__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Vendor_Invoice_Items__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>