sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <label>Total Payments</label>
    <summarizedField>Vendor_Invoice_Payment__c.Payment_Cost__c</summarizedField>
    <summaryForeignKey>Vendor_Invoice_Payment__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>