sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Variance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Variance_Flag__c</fullName>
    <description>Flag to show if the reconciled value is greater than the invoice Total or less than the invoice Total.</description>
    <formula>IF( Reconciled_Invoice_Total__c  &gt; Max_Price_Var__c   , 99 , IF(Reconciled_Invoice_Total__c  &gt;  Invoice_Total__c, 1, IF(Reconciled_Invoice_Total__c  =  Invoice_Total__c, 0 , IF(Reconciled_Invoice_Total__c  &gt;   Min_Price_Var__c , -1, IF(Reconciled_Invoice_Total__c  &lt;  Min_Price_Var__c  , -99, 0 ) )))  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag to show if the reconciled value is greater than the invoice Total or less than the invoice Total.</inlineHelpText>
    <label>Variance Flag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>