sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sanergy Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sanergy Toilet Sale - FLO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Invoices</relationshipLabel>
    <relationshipName>Vendor_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>