sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Vendor_Invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_date__c</fullName>
    <description>Date as shown on the Vendor Invoice</description>
    <inlineHelpText>Date as shown on the Vendor Invoice</inlineHelpText>
    <label>Vendor Invoice date</label>
    <type>Date</type>
</CustomField>