sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/Vendor_Invoice_Payments_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Payments_Flag__c</fullName>
    <description>Counts the number of Vendor Invoice Payments made</description>
    <inlineHelpText>Counts the number of Vendor Invoice Payments made</inlineHelpText>
    <label>Vendor Invoice Payments Flag</label>
    <summaryForeignKey>Vendor_Invoice_Payment__c.Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>