sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/VI_Company__c.field-meta.xml
<CustomField>
    <fullName>VI_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company this VI Belongs to</description>
    <inlineHelpText>Company this VI Belongs to</inlineHelpText>
    <label>VI Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select a valid Company</errorMessage>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>company</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Vendor Invoices</relationshipLabel>
    <relationshipName>Vendor_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>