sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/VI_PIN__c.field-meta.xml
<CustomField>
    <fullName>VI_PIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VI Payable Invoice</description>
    <inlineHelpText>VI Payable Invoice</inlineHelpText>
    <label>VI PIN</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipLabel>Vendor Invoices</relationshipLabel>
    <relationshipName>VI_PIN</relationshipName>
    <type>Lookup</type>
</CustomField>