sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/VI_Price_Var_Per__c.field-meta.xml
<CustomField>
    <fullName>VI_Price_Var_Per__c</fullName>
    <label>VI Price Var Per</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>