sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/VI_Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>VI_Receipt_Status__c</fullName>
    <label>VI Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Items Received</fullName>
            </value>
            <value>
                <fullName>Items Partially Received</fullName>
            </value>
            <value>
                <fullName>All Items Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>