sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/fields/VI_Status__c.field-meta.xml
<CustomField>
    <fullName>VI_Status__c</fullName>
    <label>VI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Firmed</fullName>
            </value>
            <value>
                <fullName>Physical Receipt</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>AP Matched</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>