sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/recordTypes/Before_Firm.recordType-meta.xml
<RecordType>
    <fullName>Before_Firm</fullName>
    <active>true</active>
    <label>Before Firm</label>
</RecordType>