sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/recordTypes/ProcurementRecordType.recordType-meta.xml
<RecordType>
    <fullName>ProcurementRecordType</fullName>
    <active>true</active>
    <label>ProcurementRecordType</label>
</RecordType>