sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice__c/recordTypes/QHSEecordType.recordType-meta.xml
<RecordType>
    <fullName>QHSEecordType</fullName>
    <active>true</active>
    <description>Record type for QHSE layout</description>
    <label>QHSERecordType</label>
</RecordType>